--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header h1, nav{
+  text-align: center;
+}
+
+figure img{
+  display: block;
+  margin: auto;
+}
+
+nav a{
+  padding: 0px 10px;
+  background-color: beige;
+}
+
+figcaption{
+  text-align: center;
+  font-size: 10px;
+}
+
+#featured-property p{
+  width: 800px;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+#details div{
+  width: 25%;
+  float: left;
+  text-align: center;
+  background-color: red;
+
+}
